--- a/src/App.css
+++ b/src/App.css
@@ -75,10 +75,18 @@ header nav ul li a:hover {
 	color: lightgray;
 }
 
+.hamburger {
+}
+
 .HeaderLink {
 	margin-top: -5%;
 	margin-bottom: -5%;
 }
+
+.HeaderLinkBurger {
+	margin-top: -27%;
+}
+
 
 /* BODY STYLING */
 body {
@@ -203,7 +211,29 @@ h1 {
   font-weight: bolder;
 }
 
+.hamburger {
+	margin-left: 10px;
+	margin-bottom: 30px;
+	display: inline-block;
+	border-bottom: 0px solid currentColor;
+  font-weight: bolder;
+}
+
+.dropdown2 {
+	margin-top: 5%;
+	display: inline-block;
+	border-bottom: 0px solid currentColor;
+  font-weight: bolder;
+}
+
 .dropdown-content {
+	display: none;
+	position: absolute;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content2 {
 	display: none;
 	position: absolute;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -232,4 +262,10 @@ h1 {
 }
 
 .dropdown:hover .dropdown-content {display: block; background-color: lightcoral;}
+.dropdown-content a:hover {color: #ddd; margin-left: 5px;}
+
+.dropdown2:hover .dropdown-content2 {display: block; background-color: lightcoral;}
+.dropdown-content2 a:hover {color: #ddd; margin-left: 5px;}
+
+.hamburger:hover .dropdown-content {display: block; background-color: lightcoral;}
 .dropdown-content a:hover {color: #ddd; margin-left: 5px;}
