--- a/src/App.css
+++ b/src/App.css
@@ -261,8 +261,11 @@ footer {
 }
 
 .signInButton, .signOutButton {
+	font-family: 'Source Sans Pro', serif;
 	color: white;
-  border-radius: 4px;
+  border-radius: 5px;
+	width: 70px;
+	height: 40px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
