--- a/src/App.css
+++ b/src/App.css
@@ -272,3 +272,41 @@ h1 {
 
 .hamburger:hover .dropdown-content {display: block; background-color: lightcoral;}
 .dropdown-content a:hover {color: #ddd; margin-left: 5px;}
+
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: rgba(0,0,0, 0.5);
+}
+.popup_inner {
+  position: absolute;
+  left: 25%;
+  right: 25%;
+  top: 25%;
+  bottom: 25%;
+  margin: auto;
+  background: white;
+	text-align: center;
+}
+
+.closePopButton {
+	position: absolute;
+	bottom: 10px;
+	margin: auto;
+  background: white;
+	text-align: center;
+}
+a:link {
+	color: lightblue;
+	font-weight: bold;
+	text-decoration: underline;
+}
+a:hover {
+	color: blue;
+}
