--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,7 @@ h1 {
 
 .popup {
   position: fixed;
+	z-index: 1;
   width: 100%;
   height: 100%;
   top: 0;
@@ -174,7 +175,7 @@ h1 {
   background-color: rgba(0,0,0, 0.5);
 }
 .popup_inner {
-  position: absolute;
+  position: fixed;
   left: 25%;
   right: 25%;
   top: 25%;
